runFormatTest(import.meta, ["flow"], {
  errors: { "babel-flow": true },
});
